# DCL_RubikCube

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  RubikCubeConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/CubeInfo/: CMakeLists.txt  CubeInfo.cpp  CubeInfo.hpp
src/Components/CubeProxy/: CMakeLists.txt  CubeProxy.cpp  CubeProxy.hpp
src/Components/CvEqualizeHistogram/: CMakeLists.txt  CvEqualizeHistogram.cpp  CvEqualizeHistogram.hpp
src/Components/CvMedianBlur/: CMakeLists.txt  CvMedianBlur.cpp  CvMedianBlur.hpp
src/Components/DrawResults/: CMakeLists.txt  DrawResults.cpp  DrawResults.hpp
src/Components/DualCanny/: CMakeLists.txt  DualCanny.cpp  DualCanny.hpp
src/Components/FindContours/: CMakeLists.txt  FindContours.cpp  FindContours.hpp
src/Components/FindCubeFace/: CMakeLists.txt  FindCubeFace.cpp  FindCubeFace.hpp
src/Components/FindParallelograms/: CMakeLists.txt  FindParallelograms.cpp  FindParallelograms.hpp
src/Components/ForFun/: CMakeLists.txt  ForFun.cpp  ForFun.hpp
src/Components/GetTilesColors/: CMakeLists.txt  GetTilesColors.cpp  GetTilesColors.hpp
src/Types/: CMakeLists.txt  Contour.hpp  CubeFace.hpp  CubeModel.hpp  Parallelogram.hpp
tasks/: FindCube.xml  FindCubeFile.xml  FindCubePGR.xml  PostumentFindCubePGR.xml  forFun.xml
